# Recruitment-Management-API

./: .dockerignore  .gitignore  .pylintrc  Dockerfile  LICENSE  Makefile  README.md  entrypoint.py  pyproject.toml
.github/workflows/: linting.yml  tests.yml
adapters/libs/: reportlab_adapter.py
adapters/repositories/: health_repository.py  vacancy_repository.py
application/dto/: health.py  media.py  pagination.py  simulation.py  vacancy.py
application/errors/: database.py  date.py  media.py
application/interfaces/: usecase.py
domain/interfaces/: health_repository.py  pdf_generator.py  vacancy_repository.py
domain/usecases/: create_vacancy.py  delete_vacancy.py  download_vacancy_summary.py  edit_vacancy_status.py  get_health_status.py  get_vacancy.py  list_vacancy.py  simulate_vacancy_costs.py  update_vacancy.py
infra/database/: pgdatabase.py
infra/docker/: compose.yaml
infra/scripts/: wait_for_services.py
migrations/models/: 0_20250725170714_init.py  1_20250727193643_change_nullable_fields.py  2_20250727200643_change_salary_expectation_field_type.py  3_20250727212705_add_created_at_and_updated_at.py
tests/integration/api/v1/vacancy/: fake_data.py  test_delete.py  test_get.py  test_patch.py  test_post.py  test_update.py
utils/: database_utils.py  date_utils.py
web/: dependencies.py  http_response_schema.py
web/app/: health.py  vacancies.py
