[project]
name = "recruitment-management-api"
version = "0.1.0"
description = ""
authors = [
    {name = "lucas",email = "lucws2002@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[all] (>=0.116.1,<0.117.0)",
    "uvicorn[all] (>=0.35.0,<0.36.0)",
    "uvloop (>=0.21.0,<0.22.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "tortoise-orm (>=0.25.1,<0.26.0)",
    "aerich[toml] (>=0.9.1,<0.10.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.aerich]
tortoise_orm = "infra.database.pgdatabase.TORTOISE_ORM"
location = "./migrations"
src_folder = "./."

[tool.poetry.group.dev.dependencies]
pytest-asyncio = "^1.1.0"
httpx = "^0.28.1"

